fix: search suggestions drawer visibility

--- a/source/css/_objects.forms.scss
+++ b/source/css/_objects.forms.scss
@@ -205,6 +205,7 @@ input[type=radio] {
 
   .c-suggestions {
     margin-top: $space;
+    display: none;
   }
 }
 
